fixed overlap of text over footer in smaller screens in aboutme.html and css

--- a/assets/aboutme.css
+++ b/assets/aboutme.css
@@ -1,12 +1,11 @@
 /* footer */
 footer{
-    bottom: 0%;
+    bottom: 0;
     width: 100%;
     clear: left;
     text-align: center;
     width: 100%;
     font-size: 1.1em;
-    position: fixed;
     padding-top: .5em;
 }
 
